@startuml

skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam backgroundColor #FFFFFF

class User {
    - id : int
    - name : String
    - email : String
    - password : String
    - reputation : int
    
    + creerColocation()
    + rejoindreColocation()
    + quitterColocation()
    + inviterMembre()
    + ajouterDepense()
    + mettreAJourReputation()
}

class Colocation {
    - id : int
    - name : String
    - owner_id : int
    - status : String
    
    + getProprietaire()
    + getMembres()
    + calculerSoldes()
    + annulerColocation()
    + retirerMembre()
}

class Expense {
    - id : int
    - title : String
    - amount : double
    - date : Date
    - category : String
    - payer_id : int
    
    + getPayeur()
    + getColocation()
    + supprimerDepense()
}

class Invitation {
    - id : int
    - email : String
    - token : String
    - status : String
    - colocation_id : int
    
    + accepterInvitation()
    + refuserInvitation()
    + envoyerEmail()
}

class Payment {
    - id : int
    - from_user_id : int
    - to_user_id : int
    - amount : double
    
    + marquerPaye()
    + enregistrerPaiement()
}

class Category {
    - id : int
    - name : String
    
    + getCategories()
    + ajouterCategorie()
}

User "1" -- "*" Colocation
User "*" -- "*" Colocation
Colocation "1" -- "*" Expense
Colocation "1" -- "*" Invitation
User "1" -- "*" Expense
User "1" -- "*" Payment
Expense "1" -- "*" Category

@enduml
